--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.username=root
 spring.datasource.password=12345678
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Desabilita serialização de propriedades nulas
+spring.jackson.default-property-inclusion=non_null
+
+# Configuração para evitar problemas de profundidade
+spring.jackson.stream-write-constraints.max-nesting-depth=100
