--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,17 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.properties.hibernate.format_sql=true
+
+# Server
+server.port=8080
+
+
+spring.web.cors.allowed-origins=*
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
