--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=radiospotify
 spring.datasource.url=jdbc:mysql://localhost:3306/radio_spotify
 spring.datasource.username=root
 spring.datasource.password=12345678
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
 
@@ -17,7 +17,9 @@ spring.jpa.properties.hibernate.format_sql=true
 # Server
 server.port=8080
 
-
 spring.web.cors.allowed-origins=*
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
+
+jwt.secret=meuSegredoSuperSecreto123456789012345678901234567890
+jwt.expiration=86400000
