--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=radiospotify
 
-spring.datasource.url=jdbc:mysql://localhost:3306/radio_spotify
+spring.datasource.url=mysql://root:IylPVvLLTVYcWFZBhjwzbSLJAaNYFuqX@ballast.proxy.rlwy.net:23672/railway
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=MllRCTDPMSqmmqACqZejufEAMgXedwDt
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
