--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,26 @@
+# Nome da aplicação
 spring.application.name=radiospotify
 
-spring.datasource.url=mysql://root:IylPVvLLTVYcWFZBhjwzbSLJAaNYFuqX@ballast.proxy.rlwy.net:23672/railway
+# Configurações do banco de dados
+spring.datasource.url=jdbc:mysql://ballast.proxy.rlwy.net:23672/railway
 spring.datasource.username=root
-spring.datasource.password=MllRCTDPMSqmmqACqZejufEAMgXedwDt
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
-
-
+spring.datasource.password=IylPVvLLTVYcWFZBhjwzbSLJAaNYFuqX
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Server
+# Configurações do servidor
 server.port=8080
 
+# CORS
 spring.web.cors.allowed-origins=*
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 
+# JWT
 jwt.secret=meuSegredoSuperSecreto123456789012345678901234567890
 jwt.expiration=86400000
