--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,20 @@
-# Nome da aplicação
 spring.application.name=radiospotify
 
-# Configurações do banco de dados
-spring.datasource.url=jdbc:mysql://ballast.proxy.rlwy.net:23672/railway
-spring.datasource.username=root
-spring.datasource.password=IylPVvLLTVYcWFZBhjwzbSLJAaNYFuqX
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Configurações do servidor
-server.port=8080
+server.port=${PORT:8080}
 
-# CORS
 spring.web.cors.allowed-origins=*
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 
-# JWT
-jwt.secret=meuSegredoSuperSecreto123456789012345678901234567890
+jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
