--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.web.cors.allowed-headers=*
 
 jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
+# application.properties
+server.forward-headers-strategy=framework
+server.use-forward-headers=true
