--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=radiospotify
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://ballast.proxy.rlwy.net:23672/railway
+spring.datasource.username=root
+spring.datasource.password=IylPVvLLTVYcWFZBhjwzbSLJAaNYFuqX
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -10,13 +10,12 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-server.port=${PORT:8080}
+server.port=8080
 
 spring.web.cors.allowed-origins=*
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 
-jwt.secret=${JWT_SECRET}
+jwt.secret=meuSegredoSuperSecreto123456789012345678901234567890
 jwt.expiration=86400000
 # application.properties
-server.forward-headers-strategy=framework
